# adhd-classification

./: .gitignore  README.md  pyproject.toml
src/: constants.py  main.py  signal_analysis.py  svm.py
